unpackaged/objects/copado__AuxiliaryObject__c.object
<CustomObject>
	<description>This object is used as a helper to create lookup fields to various objects so that they may be used in e.g. AJAX lookups.</description>
	<fields>
		<fullName>copado__Continuous_Integration__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Continuous Integration</label>
		<referenceTo>copado__Continuous_Integration__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Data_Set__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<description>Lookup to Data Set to use in StepEdition component in deployment page.</description>
		<label>Data Set</label>
		<referenceTo>copado__Data_Set__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Data_Template__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Data Template</label>
		<lookupFilter>
			<active>true</active>
			<filterItems>
				<field>copado__Data_Template__c.copado__Active__c</field>
				<operation>equals</operation>
				<value>True</value>
			</filterItems>
			<isOptional>false</isOptional>
		</lookupFilter>
		<referenceTo>copado__Data_Template__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Date_Time__c</fullName>
		<label>Date Time</label>
		<type>DateTime</type>
	</fields>
	<fields>
		<fullName>copado__Default_Number__c</fullName>
		<label>Default Number</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Default_String__c</fullName>
		<label>Default String</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Default_Text__c</fullName>
		<label>Default Text</label>
		<type>TextArea</type>
	</fields>
	<fields>
		<fullName>copado__Deployment_Flow__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Pipeline</label>
		<referenceTo>copado__Deployment_Flow__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Deployment__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Deployment</label>
		<referenceTo>copado__Deployment__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Environment__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Environment</label>
		<referenceTo>copado__Environment__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Function__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Function</label>
		<referenceTo>copado__Function__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Git_Backup__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Git Snapshot</label>
		<lookupFilter>
			<active>true</active>
			<filterItems>
				<field>copado__Git_Backup__c.copado__Git_Snapshot_Permissions__c</field>
				<operation>notEqual</operation>
				<value>Allow Commits Only</value>
			</filterItems>
			<isOptional>false</isOptional>
		</lookupFilter>
		<referenceTo>copado__Git_Backup__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Git_Repository__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Git Repository</label>
		<referenceTo>copado__Git_Repository__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Org_Credential__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Org Credential</label>
		<referenceTo>copado__Org__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Org_Difference__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Org Difference</label>
		<referenceTo>copado__OrgDiff__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Package_Version__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Package Version</label>
		<referenceTo>copado__Artifact_Version__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Promotion__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Promotion</label>
		<referenceTo>copado__Promotion__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Release__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Release</label>
		<referenceTo>copado__Release__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Selenium_Test_Group__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Selenium Test Group</label>
		<referenceTo>copado__Selenium_Test_Group__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Selenium_Test_Run__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Selenium Test Run</label>
		<referenceTo>copado__Selenium_Test_Run__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Snapshot_Difference__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Snapshot Difference</label>
		<referenceTo>copado__Snapshot_Difference__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Static_Code_Analysis_Settings__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Static Code Analysis Settings</label>
		<referenceTo>copado__Static_Code_Analysis_Settings__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__Test__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Test</label>
		<referenceTo>copado__Test__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__User_Story__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User Story</label>
		<referenceTo>copado__User_Story__c</referenceTo>
		<relationshipLabel>AuxiliaryObjects</relationshipLabel>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>copado__User__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>User</label>
		<referenceTo>User</referenceTo>
		<relationshipName>AuxiliaryObjects</relationshipName>
		<type>Lookup</type>
	</fields>
	<label>AuxiliaryObject</label>
	<nameField>
		<label>AuxiliaryObject Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>AuxiliaryObjects</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>